kubernetes/apps/network/internal/remote-services/services/apc1.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
apiVersion: v1
kind: Service
metadata:
  name: remote-internal-apc1
  namespace: network
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-apc1
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-apc1
addressType: IPv4
ports:
  - port: 80
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-apc1
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "apps"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "APC1"
    gethomepage.dev/description: "APC UPS"
    gethomepage.dev/href: "https://apc1.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "apc.png"
    gethomepage.dev/siteMonitor: http://${SETTINGS_APC1_IP}:80
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-apc1
              port:
                number: 80
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
